@@ -9,6 +9,8 @@ Version 2.2
 * Detailed error message added to exception. In an exception handler,
   the variable Exception_frame.message, provides an alternative to 
   Connection_getLastError() for obtaining the error message
+* From this release, building with exceptions handling is no longer 
+  optional but required
 Bug fixes:
 * Fixed Connection_prepareStatement() error reported on a PostgreSQL
   Connection. Thanks to Paul Stevens for bug report.
